# Simple-Compiler

./: CMakeLists.txt  Readme.md
docs/: Gramatyka.txt  TKOM_Doc.md
include/CharReader/: charReader.h
include/Exception/: myException.h
include/Lexer/: lexer.h  token.h  tokenTypes.h
include/Parser/: parser.h  symbolTable.h  symbolTableManager.h  syntaxTree.h
include/Visitors/: interpreterVisitor.h  parserVisitor.h  semanticVisitor.h  syntaxTreeVisitor.h  visitorTemplate.h
src/: main.cpp
src/CharReader/: charReader.cpp
src/Exception/: myException.cpp
src/Lexer/: lexer.cpp  token.cpp
src/Parser/: parser.cpp  symbolTable.cpp  symbolTableManager.cpp  syntaxTree.cpp
src/Visitors/: interpreterVisitor.cpp  parserVisitor.cpp  semanticVisitor.cpp  syntaxTreeVisitor.cpp  visitorTemplate.cpp
tests/: CMakeLists.txt
tests/lib/googletest-1.14.0/docs/: gmock_for_dummies.md
tests/lib/googletest-1.14.0/googletest/cmake/: internal_utils.cmake
tests/lib/googletest-1.14.0/googletest/include/gtest/internal/: gtest-type-util.h
tests/test_data/: charReader_test_file1.txt  lexer_test_basic_file.txt  lexer_test_file1.txt  lexer_test_file2.txt  lexer_test_file3.txt  lexer_test_file4.txt
tests/unit_tests/: CMakeLists.txt  charReader_test.cpp  interpreter_test.cpp  lexer_test.cpp  myException_test.cpp  parser_test.cpp  semanticAnalyzer_test.cpp  syntaxTree_test.cpp  token_test.cpp
